--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -4,7 +4,7 @@
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Úterý, 31. 08. 2021</h5>
+<h5>Středa, 01. 09. 2021</h5>
 <span class="line"></span>
 <p>
 <strong>Kapustová</strong>
@@ -50,64 +50,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Úterý 31.8.2021</div>
+<div class="nadpis">Středa 1.9.2021</div>
 <ul>
-<li class="polevka">
-<div class="polozka">300ml Minestrone sypaná parmazánem a bazalkou v menu <em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">29 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Minestrone sypaná parmazánem a bazalkou samostatně <em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Hovězí rajská pečeně, houskový knedlík, perníkový chips <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>150g Grilované kuřecí prso na kuskusovém salátu s pečenou zeleninou, dresink z dijonské hořčice <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Hořčice">10</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>300g Květákové pyré s pečenými cherry rajčaty a restovaným tofu, balsamiková redukce, baby špenát <em title="Mléko">7</em><em title="Hořčice">10</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">4. </span>250g Variace bavorských baget</div>
-<div class="cena">69 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">5. </span>200g Okurkový salát <em title="Oxid siřičitý a siřičitany">12</em></div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">6. </span>200g Šopský salát s olivami <em title="Mléko">7</em></div>
-<div class="cena">49 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">7. </span>200g Ovocný salát </div>
-<div class="cena">49 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">8. </span>100g Tiramisu <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">69 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">9. </span>100g Mangový cheesecake <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">69 Kč</div>
-<div class="clear"></div>
-</li>
-</ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -118,16 +63,16 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Ruský boršč se zakysanou smetanou</td><td class="menuPrice">37,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi  ok</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Čočková s klobásou</td><td class="menuPrice">37,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP:</td><td class="menuName">Biftečky z mletého masa na roštu přelité jemnou hořčičnou omáčkou, grilované brambory s kmínem</td><td class="menuPrice">109,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Rajská hovězí pečeně, kynuté houskové knedlíky</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečená vepřová kýta na žampionech, dušená jasmínová rýže</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Moravský vrabec, bramborové knedlíky, špenát</td><td class="menuPrice">131,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Pečená vepřová panenka, grilovaná brokolice s karotkou a volským okem, květákové pyré s máslem</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažené žampiony, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny linguine s plátky sušených rajčat ve smetaně s oreganem, řezy z pečené vepřové panenky, strouhaný parmazán</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Smažené řízky z vepřové panenky obalené v cornflakes, bramborová kaše s máslem, citron</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Steak z kuřecích prsou na roštu, vařené vejce na pórkovém soté s parmazánem, mačkané brambory s máslem</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zeleninový salát promíchaný se sekanými bylinkami a olivovým olejem, restované nudličky z kuřecích prsou, vařené vejce na majonéze</td><td class="menuPrice">133,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Smažený sýr (45%), vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">115,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Koprová omáčka s hovězím masem a vařeným vejcem, kynuté houskové knedlíky</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Dušená hovězí roštěná na víně, dušená jasmínová rýže</td><td class="menuPrice">131,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Šenkýrenský hovězí guláš s cibulí a beraním rohem, naše bramboráčky</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra na roštu, pečené brambory s kmínem, feferonkový dip</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Bramborové noky v rokfórové omáčce, plátkované kuřecí prso na grilu, strouhaný parmazán</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Špíz z vepřového karé na roštu, míchaný zeleninový salát promíchaný olivovým olejem, vařené vejce </td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z kuřecích prsou se šunkou, pórkem a vejcem gratinovaný sýrem, mačkané brambory s máslem</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pšeničná tortilla plněná plátkovanou vepřovou panenkou, anglickou slaninou, ledovým salátem s česnekovým dresinkem, sýrem a okurkou, smažené bramborové hranolky, tatarka</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Míchaný zeleninový salát ochucený majonézovým dresinkem, nudličky z kuřecích prsou restované s anglickou slaninou, vařené vejce</td><td class="menuPrice">129,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Instagram od 15:00 do 19:00</h5><tr><td class="menuWeight">Insta gram</td><td class="menuName">Sleduješ nás na instagramu? Pokud ano, tak můžeš denně od 15:00 do 19:00 hod. čerpat prázdninovou Šenkbombu. (Při objednání poprosíme prokázat sledování na telefonu. Jeden sledující = jedno jídlo denně za 77,-). </td><td class="menuPrice">77,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z kuřecích prsou obalené v cornflakes, vařené brambory s máslem a petrželkou (pro sledující od 15:00 do 19:00) </td><td class="menuPrice">77,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové kotlety bez kosti, vařené brambory s máslem a petrželkou (pro sledující od 15:00 do 19:00) </td><td class="menuPrice">77,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">120g Smažený sýr 45%, vařené brambory s máslem a petrželkou, tatarka (pro sledující od 15:00 do 19:00) </td><td class="menuPrice">77,-</td></tr></tbody>
+<h5 class="border_box_title">Instagram od 15:00 do 19:00</h5></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Vanilková zmrzlina zasypaná lentilkami</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Pivovar Kunratice - Muflon Šenkýř ALE 11°alk. 4,2%</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">TOP:</td><td class="menuName">COOL Grep čepovaný 0,5l (nealko)</td><td class="menuPrice">45,-</td></tr></tbody>
+<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vanilková zmrzlina zasypaná lentilkami</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Pivovar Kunratice - Muflon Šenkýř ALE 11°alk. 4,2%</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">TOP:</td><td class="menuName">COOL Grep čepovaný 0,5l (nealko)</td><td class="menuPrice">45,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody></table></table>
@@ -136,6 +81,50 @@
 </table>
 <table>
 <tr><th>MATTES<br><a href="https://www.mattesrestaurace.cz/">https://www.mattesrestaurace.cz/</a></th></tr>
+<tr>
+<td>
+<table class="dm">
+<tbody>
+<tr>
+<td class="amount">150g</td>
+<td class="title">Kachní škvarková pomazánka se škvarky, naše zázvorové okurky,
+		u nás dělaný rozmarýnový chléb 1ab</td>
+<td class="pricem">165 Kč</td>
+</tr>
+<tr>
+<td class="amount"></td>
+<td class="title">Valašská kyselica s mačkanými brambory s cibulkou
+		a zakysanou smetanou 1a,7,12</td>
+<td class="pricem">69 Kč</td>
+</tr>
+<tr>
+<td class="amount">500g</td>
+<td class="title">Konfitované hovězí žebro se silnou šťávou, restovanou
+		zeleninou se žampiony, hořčicí, křenem a naším cibulovým
+		chlebem 1a,9,10</td>
+<td class="pricem">239 Kč</td>
+</tr>
+<tr>
+<td class="amount">250g</td>
+<td class="title">Grilovaná krkovice IBERICO s ragú z lišek a pečenými
+		brambory Grenaille 1a,7,9</td>
+<td class="pricem">259 Kč</td>
+</tr>
+<tr>
+<td class="amount"></td>
+<td class="title">Smažené hrušky v těstíčku se skořicovým cukrem, zakysanou
+		smetanou, meruňkovým pyré a oříškovým griliášem 1a,3,7,8</td>
+<td class="pricem">89 Kč</td>
+</tr>
+</tbody>
+</table>
+</td>
+</tr>
+<tr>
+<td>
+<table class="dm"><tr><td class="amount"> </td><td class="title">Čočková s uzeninou 1a</td><td class="pricem">35 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Hovězí maso na kořenové zelenině a červeném víně s nakládanými cibulkami, rozpečenou anglickou slaninou a smetanovou bramborovou kaší 1a,7,9,12</td><td class="pricem">135 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Burger s trhaným vepřovým masem marinovaným v barbecue omáčce, ledovým salátem, rajčaty, karamelizovanou cibulkou a chipotle majonézou se steakovými hranolky 1a,3,7,10,11</td><td class="pricem">145 Kč</td><tr><tr><td class="amount">300g</td><td class="title">Zeleninové lečo s klobásou a vejci s naším cibulovým chlebem 1ab,3,7</td><td class="pricem">125 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
+</td>
+</tr>
 </table>
 <table>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
