--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,21 +7,21 @@
 <h5>Středa, 01. 09. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Kapustová</strong>
+<strong>Frankfurtská</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Dušené hovězí na houbách s rýží</strong>
+<strong>Vídeňská rostěná s fritátovými brambůrky, cibulkou a pepřovou majonézou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							127,-
+							145,-
 						</span>
 </p>
 <p>
-<strong>Masová quesadilla na ledovém salátku s jogurovým dresinkem</strong>
+<strong>Těstoviny s rajčatovo-bazalkovou omáčkou, kuřecím masem a parmazánem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							127,-
