--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -130,7 +130,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Pikantni marocka tagina s kousky rybich filetu, cerstvymi slavkami, rajcaty, nakladanymi citrony, zeleninou, bylinkami a cernymi olivami, kuskus, salatek {L} 139</li><li>Peceny filet z cerstveho mecouna s citronem a thajskym chilli dzemem, korenena ryze, salatek 169</li><li>Pomalu dusene hovezi ve sladke a vonave omacce se zazvorem, hoisin a korenim peti vuni, jasminova ryze, salatek 139</li><li>Smazeny sekany teleci rizek s cedarem a petrzelkou, bramborovy salat s cervenou repou, zelenou cibulkou a majonezou, citron {L} 165</li><li>Tacos {kukuricne} s pikantnimi barbecue fazolemi, a pecenou dyni s paprikami a balkanskym syrem, salatek 139</li></ol>
+<ol><li>Peceny filet z atlanticke makrely s tureckymi olivami a kaparami, stredomorsky fusilli salat s cerstvymi rajcaty, paprikami a cuketami {L} 139</li><li>Peceny filet z cerstveho norskeho lososa s tureckymi olivami a kaparami, stredomorsky fusilli salat s cerstvymi rajcaty, paprikami a cuketami {L} 169</li><li>Grilovane malajske veprove marinovane v kokosovem mlece, arasidova omacka, smazena ryze se zeleninou, salatek 139</li><li>Peceny kralik na dijonske horcici, bilem vine a slanine po francouzsku {Lapin ala moutarde}, gratinovane brambory, salatek 169</li><li>Thajske cervene kari s pecenym tofu, brokolici, kokosovym mlekem, citronovou travou a zeleninou, jasminova ryze 139</li></ol>
 </td>
 </tr>
 </table>
