--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -4,7 +4,7 @@
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Pondělí, 13. 09. 2021</h5>
+<h5>Úterý, 14. 09. 2021</h5>
 <span class="line"></span>
 <p>
 <strong>Vývar se zeleninou a uzeným masem</strong>
@@ -50,59 +50,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Pondělí 13.9.2021</div>
+<div class="nadpis">Úterý 14.9.2021</div>
 <ul>
-<li class="polevka">
-<div class="polozka">300ml Zeleninový krém s krutony a pažitkou v menu <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">29 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Zeleninový krém s krutony a pažitkou samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>140g Hovězí nudličky v teriyaki omáčce, koriandr, čerstvá zelenina, basmati rýže <em title="Ryby">4</em><em title="Podzemnice olejná (arašídy)">5</em><em title="Sójové boby (sója)">6</em><em title="Sezamová semena (sezam)">11</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>150g Kuřecí steak zapečený s mozzarellou a rajčaty, bramborová kaše, zeleninový salát <em title="Mléko">7</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>300g Ragú z černé čočky, pečená rajčata, sázené vejce, balsamiková redukce, rukola <em title="Vejce">3</em><em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
-<div class="cena">139 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">4. </span>250g Variace bavorských baget <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">69 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">5. </span>200g Okurkový salát <em title="Oxid siřičitý a siřičitany">12</em></div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">6. </span>200g Ovocný salát </div>
-<div class="cena">49 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">7. </span>100g Pražský koláč <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">45 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">8. </span>80g Míša dort s tvarohem a čokoládou <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">59 Kč</div>
-<div class="clear"></div>
-</li>
-</ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -113,16 +63,16 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Gulášová </td><td class="menuPrice">Vyprodáno</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Česnečka se sýrem a krutony</td><td class="menuPrice">37,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Sekané masové biftečky na tálu s jemnou houbovou omáčkou, šťouchané brambory s cibulí </td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí svíčková na smetaně, kynuté houskové knedlíky, brusinky, šlehačka</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Bramborové halušky s uzeným masem a zelím, škvarky s cibulí </td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">170g</td><td class="menuName">Smažená vepřová kapsa plněná šunkou sýrem a kapií, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight"></td><td class="menuName">Nadívaný pečený vepřový bůček, bramborové knedlíky, špenát</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 180g Pečený sekaný masový váleček pečený v anglické slanině, celerové pyré se sýrem, vařené vejce, rukola</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny fusili se šunkou a kukuřicí zjemněné smetanou, plátkovaná kuřecí prsa, strouhaný parmazán</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z kuřecích prsou na jemné pepřové omáčce, restované špecle</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Steak z vepřové pečeně na roštu, smetanová omáčka s barevným drceným pepřem, špecle</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listu a zeleniny promíchaný česnekovým dresinkem, dorůžova pečená vepřová panenka, bramborové chipsy, strouhaný parmazán</td><td class="menuPrice">135,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP:</td><td class="menuName">150g Vepřové karé pečené dorůžova na pepřové redukci, pečené brambory s kmínem, salát coleslaw</td><td class="menuPrice">115,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vepřová plec na houbách, kynuté houskové knedlíky</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Znojemská hovězí pečeně, dušená jasmínová rýže</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Moravský vrabec, bramborové knedlíky, dušené bílé zelí</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Drůbeží játra na roštu s červenou cibulí, pečené brambory s kmínem, chilli dip</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Kapsa z vepřové pečeně plněná šunkou, brokolicí a sýrem na roštu, smetanové omáčka s anglickou slaninou a pórkem, pečené brambory s kmínem, česnekový dip</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Steak z kuřecích prsou na pyré z brokolice zjemněném smetanou, grilované rajče sypané parmazánem, sázené vejce</td><td class="menuPrice">153,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažené masové karbanátky, bramborová kaše s máslem, kyselá okurka</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z kuřecích prsou na jemné omáčce s nivy, špecle</td><td class="menuPrice">134,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zeleninový salát promíchaný s majonézovým dresinkem, žampiony v sýrovém těstíčku, vařené vejce</td><td class="menuPrice">132,-</td></tr></tbody>
+</table><table class="table">
+<tbody>
+<h5 class="border_box_title">Pokud nás stále sleduješ na instagramu, můžeš využít každý den od 15:00 do 19:00 své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</h5><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">TIP</td><td class="menuName">Tvarohový míša řez</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr></tbody>
-</table><table class="table">
-<tbody>
-<h5 class="border_box_title">Dnes na Čepu</h5><tr><td class="menuWeight">0,5l</td><td class="menuName">Staropramen 10° </td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Staropramen 11° - ležák</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Extra chmelená 12°</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Pivovar Kunratice - Muflon Šenkýř ALE 11°alk. 4,2%</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Malinovka</td><td class="menuPrice">25,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody></table></table>
@@ -168,6 +118,11 @@
 </tr>
 </tbody>
 </table>
+</td>
+</tr>
+<tr>
+<td>
+<table class="dm"><tr><td class="amount"> </td><td class="title">Zabijačková bílá s kroupami 1c</td><td class="pricem">35 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Trhaná hovězí plec s koprovou omáčkou, zastřeným vejcem a vařenými brambory Grenaille 1a,3,7,9</td><td class="pricem">135 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Grilované medailonky z vepřové panenky na krémovém rizotu s chřestem, rukolovými listy a hoblinami parmazánu 1a,7</td><td class="pricem">149 Kč</td><tr><tr><td class="amount">400g</td><td class="title">Zeleninový salát s trhanými listy, sýrem feta, kuřecím masem a naší bylinkovou foccaciou 1a,3,7</td><td class="pricem">129 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
 </td>
 </tr>
 </table>
